src/core-crm/objects/CartItem/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <description>The pricing chosen on checkout</description>
    <externalId>true</externalId>
    <label>Pricebook Entry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>