src/core-crm/objects/CartItem/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated program offering that’s added to the cart</description>
    <label>Program Offering</label>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>