src/core-crm/objects/CartItem/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID reference of the details of the promotion used in the registration</description>
    <label>Promotion</label>
    <referenceTo>Promotion</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>