src/core-crm/objects/CartItem/fields/Promotion_Price__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Price__c</fullName>
    <description>The actual discount deducted from the list/actual price.</description>
    <label>Promotion Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>